--- a/admin/Tpl/Public/header.html
+++ b/admin/Tpl/Public/header.html
@@ -3,10 +3,10 @@
     <head>
         <title></title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel='stylesheet' type="text/css" href="../Public/css/style.css" />
-        <script type="text/javascript" src="../Public/js/jquery-1.7.2.min.js"></script>
-        <script type="text/javascript" src="../Public/js/common.js"></script>
-        <script type="text/javascript" src="../Public/js/jquery-yufu5.js"></script>
+        <link rel='stylesheet' type="text/css" href="__PUBLIC__/css/style.css" />
+        <script type="text/javascript" src="__PUBLIC__/js/jquery-1.7.2.min.js"></script>
+        <script type="text/javascript" src="__PUBLIC__/js/common.js"></script>
+        <script type="text/javascript" src="__PUBLIC__/js/jquery-yufu5.js"></script>
         
         <script type="text/javascript">
             $(function(){
@@ -24,8 +24,8 @@
         var Public = '../Public/';
         //-->
         </script>
-        <script type="text/javascript" src="../Public/js/iColorPicker.js"></script>
-        <script type="text/javascript" src="../Public/ueditor/editor_config.js"></script>
-        <script type="text/javascript" src="../Public/ueditor/editor_all.js"></script>
+        <script type="text/javascript" src="__PUBLIC__/js/iColorPicker.js"></script>
+        <script type="text/javascript" src="__PUBLIC__/ueditor/editor_config.js"></script>
+        <script type="text/javascript" src="__PUBLIC__/ueditor/editor_all.js"></script>
     </head>
     <body>
